# plain

./: .gitignore  CMakeLists.txt  DISCUSSION  EXAMPLES  Makefile  README  README.md  TODO  test.c  xmake.lua
Binary/: CMakeLists.txt
Binary/Deployment/Darwin/x64/: Makefile
Binary/Deployment/Linux/x64/: Makefile
Binary/Deployment/Linux/x86/: Makefile
Binary/Source/: Application.c  Application.h  Binding.h  Entry.c  Environment.h  NC.go  Plain.h  Prompt.c
Binary/Source/GNU/: Prompt.c
Binary/Source/Mocosel/: Log.h  Run.c  Unit.h
Binary/Source/Mocosel/Environment/: Report.c
Binary/Source/Mocosel/Environment/Layer/: Resolve.c
Binary/Source/Mocosel/Plain/: Report.c
Binary/Source/Mocosel/Plain/Layer/: Resolve.c
Binary/Source/POSIX/: Prompt.c
Binary/Source/Plain/: Evaluate.c  Run.c
Binary/Source/Plain/Runtime/: Report.c  Resolve.c
Binary/x86/: plain  test.plain
Deployment/Darwin/: Makefile
Deployment/Darwin/x86/: Makefile  Target.cmake
Deployment/Linux/: Makefile
Deployment/Linux/ARM/: Makefile
Deployment/Linux/x86/: Makefile  Target.cmake
Development/pfvx86/: CMakeLists.txt  Easy.c  Easy.h
Documentation/: Semantics  Syntax
Include/Plain/: Auxiliary.h  CL.h  Compact.h  Framework.h  Mocosel.h  Parser.h  Plain.h  Plain.hpp  Runtime.h  Runtime.hpp  VM.h
Include/Plain/Framework/: Finalize.h  Object.h  Run.h  Scope.h
Include/Plain/Framework/Host/: Environment.h  Manifest.h  Version.h
Include/Plain/Runtime/: Context.h  Frame.h  Lookup.h  Object.h  Register.h  Scope.h  Statement.h  Subroutine.h  Unregister.h  Walk.h  Yield.h
Include/Plain/Runtime/Host/: Environment.h
Include/Plain/Shared/: Concat.h  Error.h  Segment.h
Include/Plain/Shared/Algorithm/: Hash.h
Include/Plain/Shared/Processing/: Delegate.h  Join.h  List.h  Purge.h  Subroutine.h  Tokenizer.h  Type.h  Value.h
Include/Plain/System/: Memory.h  Platform.h
Inspector/Source/: Application.c  Main.cpp
Inspector/Source/GNU/: Prompt.c
Inspector/Source/Plain/: Evaluate.c
Inspector/Source/Plain/Runtime/: Report.c
Inspector/Source/Platform/: Prompt.hpp
Inspector/Source/Platform/GNU/: Prompt.cpp
Inspector/Source/Platform/Windows/: Prompt.cpp
Inspector/Source/Windows/: Prompt.c
MOCOSEL_SPECIFICATION_2013_Q2/: Build.rb
MOCOSEL_SPECIFICATION_2013_Q2/Markup/: .DS_Store.html  Array.html  Comment.html  Declaration.html  Definition.html  Filter.html  Fold.html  Index.html  Keyword.html  Language.html  Nil.html  Procedure.html  Range.html  Statement.html
MOCOSEL_SPECIFICATION_2013_Q2/Text/: Array  Comment  Declaration  Definition  Function  If  Index  Keyword  Language  Node  Procedure  Range  Statement  Target  Value  Zip
MOCOSEL_SPECIFICATION_2013_Q4/: Build.rb  Makefile
MOCOSEL_SPECIFICATION_2013_Q4/Markup/: And.html  Apply.html  Array.html  Boolean.html  Comment.html  Compact.html  Declaration.html  Definition.html  Difference.html  Do.html  Filter.html  Fold.html  Full.html  Function.html  If.html  Index.html  Integer.html  Is.html  Keyword.html  Language.html  License.html  List.html  Map.html  Naked.html  Nil.html  Node.html  Or.html  Procedure.html  Product.html  Quotient.html  Range.html  Real.html  Remainder.html  Return.html  Statement.html  String.html  Sum.html  Target.html  Value.html  Zip.html
MOCOSEL_SPECIFICATION_2013_Q4/Text/: And  Apply  Array  Comment  Compact  Declaration  Definition  Difference  Do  Filter  Fold  Full  Function  If  Index  Is  Keyword  Language  List  Map  Naked  Node  Or  Procedure  Product  Quotient  Range  Remainder  Return  Statement  Sum  Target  Value  Zip
MOCOSEL_SPECIFICATION_2014_Q1/: Build.rb
MOCOSEL_SPECIFICATION_2014_Q1/Markup/: And.html  Apply.html  Array.html  Boolean.html  Definition.html  Do.html  Filter.html  Fold.html  If.html  Integer.html  Language.html  Naked.html  Nil.html  Node.html  Product.html  Real.html  Remainder.html  String.html  Value.html  and.html  apply.html  array.html  boolean.html  comment.html  compact.html  declaration.html  definition.html  difference.html  do.html  filter.html  fold.html  full.html  function.html  if.html  integer.html  is.html  keyword.html  language.html  license.html  list.html  (+17 more)
MOCOSEL_SPECIFICATION_2014_Q1/Text/: And  Apply  Comment  Compact  Declaration  Do  Full  Language  List  Naked  Node  Procedure  Range  Value
Sample/: 1.plain
Samples/: Vec2.cpp
Samples/Tetris/: Game.plain  Main.cpp
Source/: Auxiliary.c  CMakeLists.txt  Makefile
Source/Complain/x86/: Complain.c  Complain.h  Session.c
Source/Complain/x86/System/: Load.c
Source/Easy/x86/: Easy.c  Session.c
Source/Easy/x86/System/: Load.c
Source/Framework/: Finalize.c  Run.c  Version.c
Source/Framework/Host/: Version.c
Source/Plain/: Auxiliary.c  Compact.c  Concat.c  Join.c  Lookup.c  Purge.c  Register.c  Tokenize.c  Tokenizer.c  Unregister.c  Walk.c  Yield.c
Source/Plain/Framework/: Finalize.c  Run.c  Version.c
Source/Plain/Runtime/: Lookup.c  Register.c  Unregister.c  Walk.c
Source/Plain/Shared/: Concat.c  Reserve.c
Source/Plain/Shared/Algorithm/: Hash.c
Source/Plain/Shared/Processing/: Join.c  Purge.c  Tokenize.c
Source/Plain/x86/: Resize.c
Source/Runtime/: Empty.c  Export.c  Import.c  Register.c  Unregister.c  Walk.c
Source/Sandbox/x86/: Sandbox.c  Sandbox.h  Session.c
Source/Sandbox/x86/System/: Load.c  Synthesize.c
Source/Shared/: Reserve.c
Source/Shared/Processing/: Tokenize.c  Unlink.c
Source/x86/: Resize.c  plain.c  plain.h
Source/x86/system/: fetch.c
Utilities/: CMakeLists.txt
Utilities/Console/: CMakeLists.txt  Easy.c
Utilities/pfvx86/: CMakeLists.txt
Wrapper/Include/Plain/: Runtime.hpp  Value.hpp
Wrapper/Source/: Runtime.cpp  Value.cpp
Wrapper/Source/Framework/: List.cpp  List.hpp
